added doctrine and some test entities

--- a/sveco/templates/address/list.html.twig
+++ b/sveco/templates/address/list.html.twig
@@ -1,5 +1,6 @@
 {# templates/address/list.html.twig #}
 {% extends 'base.html.twig' %}
+{% set locale_u = 'sv' %}
 {% block title %}
 Your lucky number is {{ number }}
 {% endblock %}
