--- a/sveco/templates/security/login.html.twig
+++ b/sveco/templates/security/login.html.twig
@@ -1,8 +1,10 @@
+{% extends 'base.html.twig' %}
+{% block body %}
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
-<form action="{{ path('login') }}" method="post">
+<form action="{{ path('login2') }}" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
@@ -14,6 +16,6 @@
         is redirected to on success (more details below)
         <input type="hidden" name="_target_path" value="/account" />
     #}
-
     <button type="submit">login</button>
 </form>
+{% endblock %}
