--- a/application/templates/security/login.html.twig
+++ b/application/templates/security/login.html.twig
@@ -4,18 +4,16 @@
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
-<form action="{{ path('login2') }}" method="post">
+<form action="{{ path('login') }}" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
     <label for="password">Password:</label>
     <input type="password" id="password" name="_password" />
 
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
+    <input type="hidden" name="_target_path" value="/address/list" />
+    <input type="hidden" name="_failed_login" value="/failed_login" />
+
     <button type="submit">login</button>
 </form>
 {% endblock %}
