--- a/application/templates/base.html.twig
+++ b/application/templates/base.html.twig
@@ -7,7 +7,7 @@
             <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}" media="all">
         {% endblock %}
     </head>
-    <body>
+    <body id="location-list">
         {% block body %}
         {% endblock %}
         {% block javascripts %}
