more boilerplate baste stuff needed to actually work

--- a/application/templates/base.html.twig
+++ b/application/templates/base.html.twig
@@ -6,11 +6,21 @@
         {% block stylesheets %}
             <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}" media="all">
         {% endblock %}
+
+        <script>
+            {% for flashbMessage in app.session.flashbag.get('notice') %}
+                alert('{{ flashbMessage }}');
+            {% endfor %}
+
+        </script>
+
+        {% block javascripts %}
+        {% endblock %}
+
     </head>
     <body>
         {% block body %}
         {% endblock %}
-        {% block javascripts %}
-        {% endblock %}
+
     </body>
 </html>
