--- a/webapp/src/app/app.scss
+++ b/webapp/src/app/app.scss
@@ -24,18 +24,19 @@
     }
     .row {
         background: #9370DB;
-        padding: 10px;
+        padding: 0 0 10px;
         color: #E6E6FA;
         font-weight: bold;
+        font-size: 16px;
         ion-icon {
-            font-size: 20px;
+            font-size:18px;
             color: #E6E6FA;
             padding-right: 5px;
         }
     }
 }
 .tabbar {
-    background: #000 !important;
+
 }
 .content {
     background: #f9fafb;
@@ -57,4 +58,7 @@ ion-col {
     white-space: nowrap;
     overflow: hidden;
     padding: 0 5px !important;
+}
+.visits {
+    text-align: right;
 }
