api auth working

--- a/application/templates/admin/locations.html.twig
+++ b/application/templates/admin/locations.html.twig
@@ -11,6 +11,7 @@
         {% trans %} All_locations {% endtrans %}
     </h1>
     Here comes a list of locations
+    Logged in user {{ user.username }}
 
     <ul>
         {% for location in locations %}
