first test to solve CORS OPTIONS header

--- a/webapp/src/pages/locations/locations.scss
+++ b/webapp/src/pages/locations/locations.scss
@@ -13,4 +13,9 @@ page-locations {
    box-shadow: none;
   }
  }
+  .spinner-container {
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+  }
 }
