--- a/webapp/src/app/app.scss
+++ b/webapp/src/app/app.scss
@@ -52,9 +52,12 @@
     font-family: Lato400;
 }
 
+.bar-button-default-md, .bar-button-clear-md-default, .bar-button-md-default {
+    color: #fff;
+}
 
 .toolbar-background-md {
-    background: #9370DB;
+    background: #28304f;
 }
 .header {
     .toolbar-title {
@@ -77,7 +80,7 @@
     background: #28304f;
 }
 .content {
-    background: #28304f;
+    background: #f3f3f3;
 }
 .header {
     .toolbar-title {
