--- a/webapp/src/pages/settings/settings.scss
+++ b/webapp/src/pages/settings/settings.scss
@@ -1,3 +1,9 @@
 page-settings {
-
+    background: #28304f;
+    .content {
+        background: #28304f;
+    }
+    .list-md {
+        border-bottom: 0 !important;
+    }
 }
