--- a/webapp/src/app/app.scss
+++ b/webapp/src/app/app.scss
@@ -92,7 +92,7 @@
 }
 .list-md {
     margin:0;
-    border-bottom: 1px solid #efefef;
+    border-bottom: 1px solid #f3f6f8;
 }
 ion-col {
     text-overflow: ellipsis;
