--- a/webapp/src/pages/locations/locations.scss
+++ b/webapp/src/pages/locations/locations.scss
@@ -48,7 +48,7 @@ page-locations {
                                                 color:#A0B0BA !important;
                                             }
                                             ion-icon.not_interested {
-                                                color:#f53d3d !important;
+                                                color:#fdb45d !important;
                                             }
                                             ion-icon.interested {
                                                 color:#3ecf8e !important;
